extension/skin/classic/events.css
/* See license.txt for terms of usage */

.panelNode-html-events {
    overflow-x: hidden;
}

.listenerSection {
    padding-bottom: 6px;
}

.listenerLabeledSection:not(.opened) > .listenerSection {
    display: none;
}

.listenerInheritHeader {
    position: relative;
    -moz-user-select: none;
    cursor: pointer;
}

.listenerInheritLabel {
    margin-left: 14px;
    font-weight: bold;
}
.listenerInheritLabel::after {
    content: ' ';
}

.listenerCategoryHeader {
    margin: 0;
    font-size: inherit;
    font-weight: bold;
}

.listenerCategory {
    margin: 1em 0 0 6px;
    font-family: monospace;
    color: #000000;
}

.listenerCategory:first-child {
    margin-top: 6px;
}

.listenerIndent {
    padding-left: 2em; /* perhaps split into padding: size of button, margin: rest */
    cursor: pointer;
    line-height: 1.4;
}

.derivedListener > .listenerIndent::after {
    content: "→";
    padding-left: 1px;
    padding-right: calc(1ch - 1px);
}

.listenerLine {
    position: relative;
    overflow: hidden; /* contain the floats */
}

.listenerLineGroup.disabled > .originalListener > .listenerIndent {
    background: transparent url(chrome://firebug/skin/disable.svg) no-repeat 2px 1px;
    filter: url(resource://firebugui/filters.svg#grayscale);
}

.listenerLineGroup > .originalListener:hover > .listenerIndent {
    background: transparent url(chrome://firebug/skin/disable.svg) no-repeat 2px 1px;
}

.listenerLine > .objectLink-sourceLink {
    position: static;
    float: right;
}

.listenerLine.doesNotApply > .listenerIndent,
.listenerLine.doesNotApply > .objectLink,
.listenerLine.doesNotApply > .selector {
    color: #AAAAAA;
}

.listenerLineGroup.disabled > .listenerLine > .listenerIndent,
.listenerLineGroup.disabled > .listenerLine > .objectLink,
.listenerLineGroup.disabled > .listenerLine > .selector {
    color: #CCCCCC;
}

.noOwnListenersText {
    padding-top: 6px;
    margin: 0 5px;
    font-family: Lucida Grande, Tahoma, sans-serif;
    font-weight: bold;
    color:  #888888;
}

